fix(navbar): - navbar mobile overflow - remove  unnecessary styles - refactor js logic

--- a/packages/wtqdocs/styles/base/_default.scss
+++ b/packages/wtqdocs/styles/base/_default.scss
@@ -88,10 +88,7 @@ html {
 }
 
 body {
-  height: 100%;
-  width: 100%;
   scroll-behavior: smooth;
-  overflow-x: hidden;
   margin: 0;
   color: hsl(var(--darkest));
 
