--- a/packages/wtqdocs/styles/pages/_home.scss
+++ b/packages/wtqdocs/styles/pages/_home.scss
@@ -36,8 +36,8 @@
 .wtq-hero {
   flex-direction: column;
   justify-content: center;
-
   text-align: center;
+  padding: 20px;
 }
 
 .wtq-title {
